[GR-57817] Resolved review comments.